Address code review: AtomicInteger for counters, synchronizedList for collections, optimize addNewIssue
Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>